mesbonslegumesbio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesbonslegumesbio-deployment
  labels:
    app: mesbonslegumesbio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mesbonslegumesbio
  template:
    metadata:
      labels:
        app: mesbonslegumesbio
    spec:
      containers:
      - name: mesbonslegumesbio
        image: ershadr/mesbonslegumesbio:v3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mesbonslegumesbio-service
spec:
  selector:
    app: mesbonslegumesbio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
