ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: monbonlait.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monbonlait-service
            port:
              number: 80
  - host: mesbonslegumes.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mesbonslegumes-service
            port:
              number: 80
  - host: mesbonslegumes.fr
    http:
      paths:
      - path: /bio
        pathType: Prefix
        backend:
          service:
            name: mesbonslegumesbio-service
            port:
              number: 80
